Fixed wrapping by updating class

--- a/assets/aisforms/styles/aisforms-common/tables.css
+++ b/assets/aisforms/styles/aisforms-common/tables.css
@@ -36,8 +36,9 @@ table.row-display .row-display tr:first-of-type td {
 
 
 /* WRAPPING CELLS --> */
-#ReportUserEditorPage .defaultTitle,
-#ReportUserEditorPage .customTitle {
+#ReportUserEditorPage .default-title,
+#ReportUserEditorPage .customTitle,
+#ReportUserEditorPage .customized-text {
   white-space: normal;
   max-width: 500px;
 }
